==> s3ptar/rear-driving-camera/ESP/FT800_DisplayGUI/src/FT_Gpu_Hal.cpp <==
#include "FT_Platform.h"
#include "FT_LCD_Type.h"
#include <Arduino.h>
#include <SPI.h>

ft_void_t  FT800::Ft_Gpu_Hal_StartTransfer( FT_GPU_TRANSFERDIR_T rw,ft_uint32_t addr)
{
    if (FT_GPU_READ == rw){
        //_ss = 0;       // cs low
        digitalWrite(_nSS_PIN, false);
        SPI.transfer(addr >> 16);
        SPI.transfer(addr >> 8);
        SPI.transfer(addr & 0xff);
        SPI.transfer(0); //Dummy Read Byte
        status = FT_GPU_HAL_READING;
    }else{
        //_ss = 0;       // cs low
        digitalWrite(_nSS_PIN, false);
        SPI.transfer(0x80 | (addr >> 16));
        SPI.transfer(addr >> 8);
        SPI.transfer(addr & 0xff);
        status = FT_GPU_HAL_WRITING;
    }
}

ft_uint8_t  FT800::Ft_Gpu_Hal_Transfer8( ft_uint8_t value)
{
        return SPI.transfer(value);   
}

ft_uint32_t  FT800::Ft_Gpu_Hal_Transfer32( ft_uint32_t value)
{
    ft_uint32_t retVal = 0;
    if (status == FT_GPU_HAL_WRITING){
        Ft_Gpu_Hal_Transfer16( value & 0xFFFF);//LSB first
        Ft_Gpu_Hal_Transfer16( (value >> 16) & 0xFFFF);
    }else{
        retVal = Ft_Gpu_Hal_Transfer16( 0);
        retVal |= (ft_uint32_t)Ft_Gpu_Hal_Transfer16( 0) << 16;
    }
    return retVal;
}

ft_void_t   FT800::Ft_Gpu_Hal_EndTransfer( )
{
    digitalWrite(_nSS_PIN, true); 
    status = FT_GPU_HAL_OPENED;
}

ft_void_t FT800::Ft_Gpu_HostCommand( ft_uint8_t cmd)
{
  digitalWrite(_nSS_PIN, false);
  SPI.transfer(cmd);
  SPI.transfer(0);
  SPI.transfer(0);
  digitalWrite(_nSS_PIN, true);
}

ft_void_t FT800::Ft_Gpu_Hal_Powercycle(  ft_bool_t up)
{
    if (up)
    {
             //Toggle PD_N from low to high for power up switch  
            digitalWrite(_nPD_PIN, false); 
            Ft_Gpu_Hal_Sleep(20);
 
            digitalWrite(_nPD_PIN, true); 
            Ft_Gpu_Hal_Sleep(20);
    }else
    {
             //Toggle PD_N from high to low for power down switch
            digitalWrite(_nPD_PIN, true); 
            Ft_Gpu_Hal_Sleep(20);
            
            digitalWrite(_nPD_PIN, false); 
            Ft_Gpu_Hal_Sleep(20);
    }
}
