==> lamik/Fishtank_computer/Src/FT_Gpu_Hal.c <==
#include "main.h"
#include "stm32f4xx_hal.h"
#include "spi.h"
#include "gpio.h"
#include <string.h>
#include "FT_Platform.h"

ft_void_t  Ft_Gpu_Hal_StartTransfer(Ft_Gpu_Hal_Context_t *host,FT_GPU_TRANSFERDIR_T rw,ft_uint32_t addr)
{
	if (FT_GPU_READ == rw){

		uint8_t cTempAddr[4];												// FT800 Memory Address										// Dummy byte


		cTempAddr[3] = (char) (addr >> 16);		// Compose the command and address to send
		cTempAddr[2] = (char) ((addr & 0xFF00) >> 8);								// middle byte
		cTempAddr[1] = (char) ((addr & 0xFF));		// low byte
		cTempAddr[0] = 0x00;

		HAL_GPIO_WritePin(FT800_CS_GPIO_Port, FT800_CS_Pin, GPIO_PIN_RESET);

		for (int i = 3; i >= 1; i--)
		{
			HAL_SPI_Transmit(host->hspi, &cTempAddr[i], 1, 1); 			// Send Memory Write plus high address byte
		}

		HAL_SPI_Transmit(host->hspi, &cTempAddr[0], 1, 1);

		host->status = FT_GPU_HAL_READING;
	}else{


		uint8_t cTempAddr[3];

		cTempAddr[2] = (char) ((addr >> 16) & 0xBF )| MEM_WRITE;	// Compose the command and address to send
		cTempAddr[1] = (char) ((addr & 0xFF00) >> 8);			// middle byte
		cTempAddr[0] = (char) ((addr & 0xFF));		// low byte

		HAL_GPIO_WritePin(FT800_CS_GPIO_Port, FT800_CS_Pin, GPIO_PIN_RESET);

		for (int i = 2; i >= 0; i--)
		{
			HAL_SPI_Transmit(host->hspi, &cTempAddr[i], 1, 1); 			// Send Memory Write plus high address byte
		}
		host->status = FT_GPU_HAL_WRITING;
	}
}

ft_uint8_t    Ft_Gpu_Hal_Transfer8(Ft_Gpu_Hal_Context_t *host,ft_uint8_t value)
{
	uint8_t retVal = 0;
	HAL_SPI_TransmitReceive(host->hspi, &value, &retVal, 1, 10);
	return retVal;
}

ft_uint32_t  Ft_Gpu_Hal_Transfer32(Ft_Gpu_Hal_Context_t *host,ft_uint32_t value)
{
	ft_uint8_t retVal[4] ;

	HAL_SPI_TransmitReceive(host->hspi, &value, retVal, 4, 10);

	return ((retVal[3] << 24) | (retVal[2] << 16) | (retVal[1] << 8) | retVal[0]);
}

ft_void_t   Ft_Gpu_Hal_EndTransfer(Ft_Gpu_Hal_Context_t *host)
{

	HAL_GPIO_WritePin(FT800_CS_GPIO_Port, FT800_CS_Pin, GPIO_PIN_SET);	// Set chip select low

	host->status = FT_GPU_HAL_OPENED;
}

ft_void_t Ft_Gpu_HostCommand(Ft_Gpu_Hal_Context_t *host, ft_uint8_t cmd)
{

	uint8_t cTemp[3];														// FT800 Memory Address

	cTemp[0] = cmd;	// Compose the command and address to send
	cTemp[1] = 0x00;								// middle byte
	cTemp[2] = 0x00;

	HAL_GPIO_WritePin(FT800_CS_GPIO_Port, FT800_CS_Pin, GPIO_PIN_RESET);	// Set chip select low

	  for (int i = 2; i >= 0; i--)
		{
			HAL_SPI_Transmit(host->hspi, &cTemp[i], 1, 0); 			// Send Memory Write plus high address byte
		}
		HAL_GPIO_WritePin(FT800_CS_GPIO_Port, FT800_CS_Pin, GPIO_PIN_SET);	// Set chip select low

}

ft_void_t Ft_Gpu_Hal_Powercycle(ft_bool_t up)
{
	if (up)
	{
		HAL_GPIO_WritePin(FT800_PD_GPIO_Port, FT800_PD_Pin, GPIO_PIN_RESET);		// Set chip select high
        Ft_Gpu_Hal_Sleep(20);
		HAL_GPIO_WritePin(FT800_PD_GPIO_Port, FT800_PD_Pin, GPIO_PIN_SET);		// Set chip select high
        Ft_Gpu_Hal_Sleep(20);

	}else
	{
		HAL_GPIO_WritePin(FT800_PD_GPIO_Port, FT800_PD_Pin, GPIO_PIN_SET);		// Set chip select high
        Ft_Gpu_Hal_Sleep(20);
    	HAL_GPIO_WritePin(FT800_PD_GPIO_Port, FT800_PD_Pin, GPIO_PIN_RESET);		// Set chip select high
        Ft_Gpu_Hal_Sleep(20);
	}
}
